--- a/Pages/ReceivingReports.cshtml
+++ b/Pages/ReceivingReports.cshtml
@@ -255,7 +255,7 @@
 
                                 <div id="itemsContainer" class="mt-3"></div>
 
-                                <button type="button" id="addButton" class="btn btn-secondary" onclick="addItem()" disabled>Add More</button>
+                                <button type="button" id="addButton" class="btn btn-secondary" onclick="addItem()" disabled>@Model.lblAddMore</button>
                             </div>
                         }
                         @* Add ItemsForReport ended  *@
