--- a/Pages/AddUnit.cshtml
+++ b/Pages/AddUnit.cshtml
@@ -39,7 +39,40 @@
     </script>
 }
 @{
-
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-4 pb-2">
+        <div class="d-block mb-4 mb-md-0">
+             <nav aria-label="breadcrumb">
+                <ol class="breadcrumb bg-transparent p-2 mb-0">
+                    <li class="breadcrumb-item d-flex align-items-center">
+                        <img src="images/home.png" alt="Home" width="16" height="16" class="me-2" />
+                        <a href="/Home" class="text-decoration-none">@Model.lblHome</a>
+                    </li>
+                    @*<li class="breadcrumb-item d-flex align-items-center">
+                        <img src="images/inventory.png" alt="Home" width="16" height="16" class="me-2" />
+                        <a href="/ManageItems" class="text-decoration-none">@Model.lblItems</a>
+                    </li>*@
+                    <li class="breadcrumb-item d-flex align-items-center">
+                        <a href="/ManageUsers" class="text-decoration-none">
+                            <img src="images/management.png" alt="Home" width="16" height="16" class="me-2" />
+                            @Model.lblUsers
+                        </a>
+                    </li>
+                    <li class="breadcrumb-item d-flex align-items-center">
+                        <a href="/ManageUnits" class="text-decoration-none">
+                            <img src="images/inventory.png" alt="Home" width="16" height="16" class="me-2" />
+                            @Model.lblUnits
+                        </a>
+                    </li>
+                    <li class="breadcrumb-item d-flex align-items-center">
+                        <img src="images/inventory.png" alt="Home" width="16" height="16" class="me-2" />
+                        @Model.lblAddUnits
+                    </li>
+                    
+                </ol>
+            </nav>
+        </div>
+        
+    </div>
     <div class="py-4">
 
         <div class="d-flex justify-content-between w-100 flex-wrap">
