--- a/Pages/Alerts/Index.cshtml
+++ b/Pages/Alerts/Index.cshtml
@@ -58,37 +58,47 @@
                     <thead class="thead-light">
                         <tr>
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardminimum[0].ItemCode)
+                                @* @Html.DisplayNameFor(model => model.ItemCardminimum[0].ItemCode) *@
+                                @Model.lblItemCode
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardminimum[0].ItemName)
+                                @* @Html.DisplayNameFor(model => model.ItemCardminimum[0].ItemName) *@
+                                @Model.lblItemName
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardminimum[0].ItemDescription)
-                            </th>
-                        
-                            <th>
-                                @Html.DisplayNameFor(model => model.ItemCardminimum[0].QuantityAvailable)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.ItemCardminimum[0].CreatedAt)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.ItemCardminimum[0].LastActivity)
+                                @* @Html.DisplayNameFor(model => model.ItemCardminimum[0].ItemDescription) *@
+                                @Model.lblItemDescription
                             </th>
                         
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardminimum[0].Minimum)
+                                @* @Html.DisplayNameFor(model => model.ItemCardminimum[0].QuantityAvailable) *@
+                                @Model.lblAvailableQuantity
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardminimum[0].ReorderLimit)
+                                @* @Html.DisplayNameFor(model => model.ItemCardminimum[0].CreatedAt) *@
+                                @Model.lblCreatedAt
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardminimum[0].Ceiling)
+                                @* @Html.DisplayNameFor(model => model.ItemCardminimum[0].LastActivity) *@
+                                @Model.lblLastActivity
+                            </th>
+                        
+                            <th>
+                                @* @Html.DisplayNameFor(model => model.ItemCardminimum[0].Minimum) *@
+                                @Model.lblMinimum
+                            </th>
+                            <th>
+                                @* @Html.DisplayNameFor(model => model.ItemCardminimum[0].ReorderLimit) *@
+                                @Model.lblReorderLimit
+                            </th>
+                            <th>
+                                @* @Html.DisplayNameFor(model => model.ItemCardminimum[0].Ceiling) *@
+                                @Model.lblCeiling
                             </th>
                     
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardminimum[0].Store)
+                                @* @Html.DisplayNameFor(model => model.ItemCardminimum[0].Store) *@
+                                @Model.lblStoreName
                             </th>
                             <th></th>
                         </tr>
@@ -145,37 +155,48 @@
                     <thead class="thead-light">
                         <tr>
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardCeiling[0].ItemCode)
+                                @* @Html.DisplayNameFor(model => model.ItemCardCeiling[0].ItemCode) *@
+                                @Model.lblItemCode
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardCeiling[0].ItemName)
+                                @* @Html.DisplayNameFor(model => model.ItemCardCeiling[0].ItemName) *@
+                                @Model.lblItemName
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardCeiling[0].ItemDescription)
+                                @* @Html.DisplayNameFor(model => model.ItemCardCeiling[0].ItemDescription) *@
+                                @Model.lblItemDescription
+
                             </th>
 
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardCeiling[0].QuantityAvailable)
+                                @* @Html.DisplayNameFor(model => model.ItemCardCeiling[0].QuantityAvailable) *@
+                                @Model.lblAvailableQuantity
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardCeiling[0].CreatedAt)
+                                @* @Html.DisplayNameFor(model => model.ItemCardCeiling[0].CreatedAt) *@
+                                @Model.lblCreatedAt
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardCeiling[0].LastActivity)
-                            </th>
-
-                            <th>
-                                @Html.DisplayNameFor(model => model.ItemCardCeiling[0].Minimum)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.ItemCardCeiling[0].ReorderLimit)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.ItemCardCeiling[0].Ceiling)
+                                @* @Html.DisplayNameFor(model => model.ItemCardCeiling[0].LastActivity) *@
+                                @Model.lblLastActivity
                             </th>
 
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardCeiling[0].Store)
+                                @* @Html.DisplayNameFor(model => model.ItemCardCeiling[0].Minimum) *@
+                                @Model.lblMinimum
+                            </th>
+                            <th>
+                                @* @Html.DisplayNameFor(model => model.ItemCardCeiling[0].ReorderLimit) *@
+                                @Model.lblReorderLimit
+                            </th>
+                            <th>
+                                @* @Html.DisplayNameFor(model => model.ItemCardCeiling[0].Ceiling) *@
+                                @Model.lblCeiling
+                            </th>
+
+                            <th>
+                                @* @Html.DisplayNameFor(model => model.ItemCardCeiling[0].Store) *@
+                                 @Model.lblStoreName
                             </th>
                             <th></th>
                         </tr>
@@ -235,37 +256,47 @@
                     <thead class="thead-light">
                         <tr>
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardReorder[0].ItemCode)
+                                @* @Html.DisplayNameFor(model => model.ItemCardReorder[0].ItemCode) *@
+                                @Model.lblItemCode
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardReorder[0].ItemName)
+                                @* @Html.DisplayNameFor(model => model.ItemCardReorder[0].ItemName) *@
+                                @Model.lblItemName
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardReorder[0].ItemDescription)
-                            </th>
-
-                            <th>
-                                @Html.DisplayNameFor(model => model.ItemCardReorder[0].QuantityAvailable)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.ItemCardReorder[0].CreatedAt)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.ItemCardReorder[0].LastActivity)
+                                @* @Html.DisplayNameFor(model => model.ItemCardReorder[0].ItemDescription) *@
+                                @Model.lblItemDescription
                             </th>
 
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardReorder[0].Minimum)
+                                @* @Html.DisplayNameFor(model => model.ItemCardReorder[0].QuantityAvailable) *@
+                                @Model.lblAvailableQuantity
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardReorder[0].ReorderLimit)
+                                @* @Html.DisplayNameFor(model => model.ItemCardReorder[0].CreatedAt) *@
+                                @Model.lblCreatedAt
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardReorder[0].Ceiling)
+                                @* @Html.DisplayNameFor(model => model.ItemCardReorder[0].LastActivity) *@
+                                @Model.lblLastActivity
                             </th>
 
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardReorder[0].Store)
+                                @* @Html.DisplayNameFor(model => model.ItemCardReorder[0].Minimum) *@
+                                @Model.lblMinimum
+                            </th>
+                            <th>
+                                @* @Html.DisplayNameFor(model => model.ItemCardReorder[0].ReorderLimit) *@
+                                @Model.lblReorderLimit
+                            </th>
+                            <th>
+                                @* @Html.DisplayNameFor(model => model.ItemCardReorder[0].Ceiling) *@
+                                @Model.lblCeiling
+                            </th>
+
+                            <th>
+                                @* @Html.DisplayNameFor(model => model.ItemCardReorder[0].Store) *@
+                                @Model.lblStoreName
                             </th>
                             <th></th>
                         </tr>
@@ -325,37 +356,47 @@
                     <thead class="thead-light">
                         <tr>
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardReorder[0].ItemCode)
+                                @* @Html.DisplayNameFor(model => model.ItemCardReorder[0].ItemCode) *@
+                                @Model.lblItemCode
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardReorder[0].ItemName)
+                                @* @Html.DisplayNameFor(model => model.ItemCardReorder[0].ItemName) *@
+                                @Model.lblItemName
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardReorder[0].ItemDescription)
-                            </th>
-
-                            <th>
-                                @Html.DisplayNameFor(model => model.ItemCardReorder[0].QuantityAvailable)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.ItemCardReorder[0].CreatedAt)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.ItemCardReorder[0].LastActivity)
+                                @* @Html.DisplayNameFor(model => model.ItemCardReorder[0].ItemDescription) *@
+                                @Model.lblItemDescription
                             </th>
 
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardReorder[0].Minimum)
+                                @* @Html.DisplayNameFor(model => model.ItemCardReorder[0].QuantityAvailable) *@
+                                 @Model.lblAvailableQuantity
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardReorder[0].ReorderLimit)
+                                @* @Html.DisplayNameFor(model => model.ItemCardReorder[0].CreatedAt) *@
+                                @Model.lblCreatedAt
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardReorder[0].Ceiling)
+                                @* @Html.DisplayNameFor(model => model.ItemCardReorder[0].LastActivity) *@
+                                @Model.lblLastActivity
                             </th>
 
                             <th>
-                                @Html.DisplayNameFor(model => model.ItemCardReorder[0].Store)
+                                @* @Html.DisplayNameFor(model => model.ItemCardReorder[0].Minimum) *@
+                                @Model.lblMinimum
+                            </th>
+                            <th>
+                                @* @Html.DisplayNameFor(model => model.ItemCardReorder[0].ReorderLimit) *@
+                                @Model.lblReorderLimit
+                            </th>
+                            <th>
+                                @* @Html.DisplayNameFor(model => model.ItemCardReorder[0].Ceiling) *@
+                                @Model.lblCeiling
+                            </th>
+
+                            <th>
+                                @* @Html.DisplayNameFor(model => model.ItemCardReorder[0].Store) *@
+                                @Model.lblStoreName
                             </th>
                             <th></th>
                         </tr>
