--- a/Pages/EditDisbursement.cshtml
+++ b/Pages/EditDisbursement.cshtml
@@ -420,11 +420,11 @@
                         </li>
                           <li class="breadcrumb-item d-flex align-items-center active" aria-current="page">
                             <img src="images/expenses.png" alt="Home" width="16" height="16" class="me-2" />
-                            Edit @Model.lblAddDisbursement
+                            @Model.lblEdit @Model.lblAddDisbursement
                         </li>
                     </ol>
                 </nav>
-                <h1 class="h4">Edit @Model.lblAddDisbursement</h1>
+                <h1 class="h4">@Model.lblEdit @Model.lblAddDisbursement</h1>
                <!-- <p class="mb-0">Dozens of reusable components built to provide buttons, alerts, popovers, and more.</p> -->
             </div>
         </div>
