--- a/Pages/EditReceivingReport.cshtml
+++ b/Pages/EditReceivingReport.cshtml
@@ -25,7 +25,7 @@
         </ol>
     </nav>
 
-    <h1 class="h4">Edit Receiving Report</h1>
+    <h1 class="h4"> @Model.lblEditReceivingReport</h1>
 </div>
 <div asp-validation-summary="All" class="text-danger"></div>
 <div class="row">
@@ -73,7 +73,7 @@
 
                             
                             <select asp-for="Report.ReceivingWarehouse" class="form-control"  id="ReceivingWarehouse" >
-                                <option value="">Select Receiving Warehouse</option>
+                                <option value="">@Model.lblSelectReceivingWarehouse</option>
                                 @foreach (var Warehouse in Model.Warehouses)
                                 {   var ManagerName = Model.Users.FirstOrDefault(u => u.UserId == Warehouse.WarehouseManagerId)?.   FullName ?? "";
                                 var JobNumber = Model.Users.FirstOrDefault(u => u.UserId == Warehouse.WarehouseManagerId)?.   JobNumber ;
@@ -87,7 +87,7 @@
                             <label>@Model.lblBasedOnDocument</label> <span class="majestic">*</span>
                             @* <input asp-for="Report.BasedOnDocument" class="form-control" required /> *@
                             <select asp-for="Report.BasedOnDocument" class="form-select" id="BasedOnDocument" name="BasedOnDocument" >
-                                <option value="">Select Based On document</option>
+                                <option value="">@Model.lblSelectBasedOndocument</option>
                                 <option value="Certification">Certification</option>
                                 <option value="Purchase order">Purchase order</option>
                                 <option value="Return order">Return order</option>
@@ -124,7 +124,7 @@
 
                             <label>@Model.lblSupplierName</label> <span class="majestic">*</span>
                             <select id="SupplierName" asp-for="Report.SupplierId" class="form-control" >
-                                <option value="">Select Supplier Name</option>
+                                <option value="">@Model.lblSelectSupplierName</option>
                                 @foreach (var supplier in Model.Suppliers)
                                 {
                                     <option value="@supplier.SupplierId" data-type="@supplier.SupplierType">@supplier.SupplierName</option>
@@ -137,10 +137,10 @@
 
                             <div class="addItems border p-2 item-group">
                             
-                                <h3>Item @(i +1)</h3>
+                                <h3>@Model.lblItem @(i +1)</h3>
                                     @if(i != 0){
                                         <div class="text-end">
-                                            <button type="button" class="btn btn-danger btn-sm remove-entry me-3">Remove</button>
+                                            <button type="button" class="btn btn-danger btn-sm remove-entry me-3">@Model.lblRemove</button>
                                         </div>
                                     }
                                                 
@@ -149,7 +149,7 @@
                                         <select class="form-select" id="ItemGroup_@i" name="ItemsForReport[@i].ItemGroup" onchange="filterItemByGroup(@i)">
                                             @* <option value="Chemicals">Chemicals</option>
                                             <option value="Glass">Glass</option> *@
-                                            <option value="">Select Item Group</option>
+                                            <option value="">@Model.lblSelectItemGroup</option>
                                             @if (Model.ItemGroupList != null)
                                             {
                                                 foreach (var item in Model.ItemGroupList)
@@ -232,7 +232,7 @@
                         }
                         <div id="itemsContainer" class="mt-3"></div>
 
-                        <button type="button" id="addButton" class="btn btn-secondary" onclick="addItem()" >Add More</button>
+                        <button type="button" id="addButton" class="btn btn-secondary" onclick="addItem()" >@Model.lblAddMore</button>
                        @* Add ItemsForReport ended  *@
 
 
