--- a/Pages/EditSupplier.cshtml
+++ b/Pages/EditSupplier.cshtml
@@ -66,6 +66,10 @@
                         </li>
                         <li class="breadcrumb-item d-flex align-items-center">
                             <img src="images/supplies.png" alt="Home" width="16" height="16" class="me-2" />
+                            <a href="/ManageSupplier" class="text-decoration-none">@Model.lblSuppliers</a>
+                        </li>
+                        <li class="breadcrumb-item d-flex align-items-center">
+                            <img src="images/supplies.png" alt="Home" width="16" height="16" class="me-2" />
                             @Model.lblUpdateSupplier
                         </li>
                     </ol>
