--- a/Pages/HazardTypes/Create.cshtml
+++ b/Pages/HazardTypes/Create.cshtml
@@ -22,11 +22,11 @@
                 </li>
                 <li class="breadcrumb-item d-flex align-items-center">
                     <img src="/images/management.png" alt="Home" width="16" height="16" class="me-2" />
-                     Add Hazard Type
+                     @Model.lblAddHazardType
                 </li>
             </ol>
         </nav>
-        <h2 class="h4">Add Hazard Type</h2>
+        <h2 class="h4">@Model.lblAddHazardType</h2>
     </div>
 </div>
 
@@ -42,8 +42,8 @@
             </div>
 
             <div class="d-flex gap-2">
-                <input type="submit" value="Create" class="btn btn-primary" />
-                <a asp-page="Index" class="btn btn-secondary">Back to List</a>
+                <input type="submit" value="@Model.lblCreate" class="btn btn-primary" />
+                <a asp-page="Index" class="btn btn-secondary">@Model.lblBack</a>
             </div>
         </form>
     </div>
